Fix the spacing and make font size smaller

--- a/css/screen.css
+++ b/css/screen.css
@@ -204,8 +204,8 @@ label {
   display: block;
   font-family: 'Yeseva One', cursive;
   color: #F8F8FF;
-  font-size: 36.674px;
-  padding: 36.674px;
+  font-size: 30px;
+  padding: 30px;
 }
 
 main{
@@ -216,34 +216,33 @@ main{
 
 h1{
   padding: 36.674px 0;
-  font-size: 75px;
-  line-height: 100px;
+  font-size: 60px;
+  line-height: 70px;
   color: #F8F8FF;
   font-family: 'Shadows Into Light', cursive;
-  margin: 22px;
+  margin: 10px;
 }
 
 p{
-  font-size: 44px;
-  line-height: 60px;
+  font-size: 30px;
+  line-height: 40px;
   padding: 36.674px;
   font-family: 'Dosis', sans-serif;
-  margin-top: 22px;
-  margin-bottom: 22px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 input{
-  font-size: 36.674px;
+  font-size: 330px;
   line-height: 40px;
-  padding-bottom: 22px;
-  margin-bottom: 22px;
+  padding-bottom: 10px;
+  margin-top: 10px;
   background-color: #DCDCDC;
   color: #696969;
   font-family: 'Yeseva One', cursive;
 }
 
 input[type=submit]{
-  margin-top: 22px;
   border-radius: 5%;
   font-size: 36.674px;
   background: #C0C0C0;
